warning for bad docs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h1>Mint</h1>
 
-      <p>A fresh web framework</p>
+      <p>A fresh web framework <strong>in development</strong></p>
 
       <a class="btn" href="https://github.com/Olivine-Labs/Mint">Get it on Github</a>
     </div>
@@ -51,6 +51,15 @@
     </nav>
 
     <div id="main" role="main" class="container">
+      <div class="alert alert-block alert-warning">
+        <strong>Documentation Innacuracies</strong>
+        <p>
+          Please note: these documents will be totally out of whack with what's on
+          the master branch. We're rebuilding Mint, and will clean up these docs
+          as we go. Don't take anything here for serious.
+        </p>
+      </div>
+
       {{ content }}
     </div>
 
