--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h1>Mint</h1>
 
-      <p>A fresh web framework <strong>in development</strong></p>
+      <p>A fresh web framework</p>
 
       <a class="btn" href="https://github.com/Olivine-Labs/Mint">Get it on Github</a>
     </div>
